--- a/elsa.css
+++ b/elsa.css
@@ -139,3 +139,15 @@ color: #FFFFFF;
 	line-height: 42px;
 	color: #FFFFFF;
 }
+
+#phone3{
+	top: 195%;
+	width: 100%;
+	height: 150%;
+	left: 0;
+	position: absolute;
+	background: #FFFFFF;
+	background-image: url("phone3.png");
+	background-size: 100% 100%;
+	z-index: -99;
+}
